// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`downloadArticle > should work 1`] = `
"# 文档1

# DOC1
![1.jpeg](./img/002/1-123456.jpeg)
## SubTitle
![2.jpeg](./img/002/2-123456.jpeg)

> 原文: <https://www.yuque.com/yuque/base1/one>"
`;

exports[`downloadArticle > should work 2`] = `
"# 文档2

# DOC2
## Title
text...
### Title2
text...


> 原文: <https://www.yuque.com/yuque/base1/two>"
`;

exports[`downloadArticle > the title is also a doc 1`] = `
"# Title1_文档

# DOC1
![1.jpeg](./img/001/1-123456.jpeg)
## SubTitle
![2.jpeg](./img/001/2-123456.jpeg)

> 原文: <https://www.yuque.com/yuque/base1/one>"
`;

exports[`downloadArticle > the title is also a doc 2`] = `
"# 文档1

# DOC2
## Title
text...
### Title2
text...


> 原文: <https://www.yuque.com/yuque/base1/two>"
`;
